results: Dell i5-6300HQ / GTX 960M runs - stock vs optimized, GC / heap / recalc-pool one-at-a-time
Spin and 120 km/h drive over ssh on the 4-core Dell (direct launch, PRIME offload,
stock launcher JSON -Xmx3072m -XX:+UseZGC). Everything is CPU-bound there; the
optimized defaults halve the drive frame rate (25.5 -> 11.6-14.2 fps) because the
three recalc workers and ZGC's concurrent threads take cycles from the game thread.
workers=1 alone restores stock (25.7 fps, p99 112 ms); --gc g1 alone gives 22.9 fps
with no allocation stalls and load 43 -> 30 s; a 4 GB heap changes nothing. Load
79-92 s stock -> 30-45 s with warm pzopt caches; boot unchanged at 22-27 s.
Proposal: default workers to 1 when cores <= 4.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>